--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubot-magnum-ci",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Kyle Wiebers <kyle@ballyhoo.it>",
   "description": "A plugin for Hubot which setups up a webhook listener for Magnum-CI and posts to all rooms listed in HUBOT_DEV_ROOMS",
   "keywords": [
@@ -20,5 +20,8 @@
     "url": "http://github.com/wiebersk/hubot-magnum-ci.git"
   },
   "license": "MIT",
-  "main": "./src/magnum-ci"
+  "bugs": {
+    "url": "https://github.com/wiebersk/hubot-magnum-ci/issues"
+  },
+  "homepage": "https://github.com/wiebersk/hubot-magnum-ci"
 }
